--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "^2.11.3",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.5",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
@@ -14,6 +16,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
