--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: one
+  remail: one@mail.com  
+  semail: two@mail.com
 
 two:
-  name: MyString
+  name: two
+  remail: two@mail.com  
+  semail: one@mail.com
